Reetan.Nayak Dev 25/force-app/main/default/objects/Case_Swarm_Rule__c/Case_Swarm_Rule__c.object-meta.xml
<CustomObject>
    <description>A rule indicating what users should auto-follow a Case in Chatter.</description>
    <label>Case Swarm Rule</label>
    <nameField>
        <displayFormat>CSR-{0000}</displayFormat>
        <label>Case Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>