Reetan.Nayak Dev 25/force-app/main/default/objects/Case_Swarm_Rule__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <label>Case Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>