Reetan.Nayak Dev 25/force-app/main/default/objects/Case_Swarm_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Cases</fullName>
            </value>
            <value>
                <fullName>Only Cases for Accounts I Own</fullName>
            </value>
            <value>
                <fullName>Only Cases with a certain Status</fullName>
            </value>
            <value>
                <fullName>Only Cases with a certain Priority</fullName>
            </value>
            <value>
                <fullName>Only Cases of a certain Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>