Reetan.Nayak Dev 25/force-app/main/default/objects/Case_Swarm_Rule__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Swarm_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>